--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link href="portfolio.html" data-target="blank">
-    <link href="contact.html" data-target="blank">
 
 </head>
 
@@ -23,24 +20,67 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="row">
-        <div class="col-md-8">
-            <h1>About Me</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="page header">
+                    <h1>About Me</h1>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="Family.jpg" alt="picture of Family" height="250px" width="250px">
+                        </div>
+                        <div class="col-md-7">
+                            <p>
+                                "On the other hand, we denounce with righteous indignation and dislike men who are so
+                                beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire,
+                                that
+                                they cannot foresee the pain and trouble that are bound to ensue; and equal blame
+                                belongs to
+                                those who fail in their duty through weakness of will, which is the same as saying
+                                through
+                                shrinking from toil and pain. These cases are perfectly simple and easy to distinguish.
+                                In a
+                                free hour, when our power of choice is untrammelled and when nothing prevents our being
+                                able
+                                to do what we like best, every pleasure is to be welcomed and every pain avoided. But in
+                                certain circumstances and owing to the claims of duty or the obligations of business it
+                                will
+                                frequently occur that pleasures have to be repudiated and annoyances accepted. The wise
+                                man
+                                therefore always holds in these matters to this principle of selection: he rejects
+                                pleasures
+                                to secure other greater pleasures, or else he endures pains to avoid worse pains."
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
