--- a/contact.html
+++ b/contact.html
@@ -42,28 +42,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-</body>
 
-<div class="container">
-    <h1>Contact Info</h1>
-    <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <address>Bcrisp084@yahoo,com</address>
-            <link href="https://www.linkedin.com/in/brian-crisp-b480301b8/">
-            https://www.linkedin.com/in/brian-crisp-b480301b8/
-            </Link>
+    <div class="container">
+        <h1>Contact Info</h1>
+        <hr>
+        <div class="row">
+            <div class="col-md-6">
+                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-primary">bcrisp084@yahoo.com
+                </a>
+                <a href="https://www.linkedin.com/in/brian-crisp-b480301b8/" type="button" class="btn btn-success">
+                    https://www.linkedin.com/in/brian-crisp-b480301b8/
+                </a>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control" rows="5"></textarea>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block">Submit</button>
 
-        </div>
-        <div class="col-md-6">
-
+                </div>
+            </div>
         </div>
     </div>
-</div>
+    <br>
 
-
-
-
+</body>
 
 
 </html>
