--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <title>Portfolio</title>
+    <style>
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgb(186, 201, 223);
+            color: white;
+            text-align: center;
+        }
+    </style>
 
 </head>
 
@@ -33,6 +45,36 @@
             </ul>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="page header">
+                    <h1>Portfolio</h1>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="scratch.png" alt="cat game" height="350px" width="350px">
+            </div>
+            <div class="col">
+                <img src="grumpycat.png" alt="grumpy cat" height="350px" width="350px">
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -42,6 +84,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    <div class="footer">
+        <p>A project created with <em>Bootstrap.</em></p>
+    </div>
 </body>
 
 
