--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <title>Contact Me</title>
+    <style>
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgb(186, 201, 223);
+            color: white;
+            text-align: center;
+        }
+    </style>
 
 </head>
 
@@ -48,7 +60,7 @@
         <hr>
         <div class="row">
             <div class="col-md-6">
-                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-primary">bcrisp084@yahoo.com
+                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-danger">bcrisp084@yahoo.com
                 </a>
                 <a href="https://www.linkedin.com/in/brian-crisp-b480301b8/" type="button" class="btn btn-success">
                     https://www.linkedin.com/in/brian-crisp-b480301b8/
@@ -75,6 +87,9 @@
         </div>
     </div>
     <br>
+    <div class="footer">
+        <p>A project created with <em>Bootstrap.</em></p>
+    </div>
 
 </body>
 
