added previous projects to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,11 @@
             color: white;
             text-align: center;
         }
+
+        body {
+            background: url(lines.jpg);
+            background-size: 100% 100%;
+        }
     </style>
 
 </head>
@@ -34,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -57,22 +62,26 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6">
                 <img src="scratch.png" alt="cat game" height="350px" width="350px">
             </div>
-            <div class="col">
+            <div class="col-lg-6">
                 <img src="grumpycat.png" alt="grumpy cat" height="350px" width="350px">
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="shaggychicPNG.PNG" alt="grooming wegpage" height="350px" width="350px">
+            </div>
+            <div class="col-lg-6">
+                <img src="shaggyfirst.PNG" alt="grooming website" height="350px" width="350px">
+            </div>
+        </div>
+    </div>
+    <br>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
