--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -20,6 +29,11 @@
             color: white;
             text-align: center;
         }
+
+        body {
+            background: url(lines.jpg);
+            background-size: 100% 100%;
+        }
     </style>
 
 </head>
@@ -31,10 +45,10 @@
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+        <section class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -43,53 +57,45 @@
                     <a class="nav-link" href="portfolio.html">Porfolio</a>
                 </li>
             </ul>
-        </div>
+        </section>>
     </nav>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-
-    <div class="container">
+    <header class="container">
         <h1>Contact Info</h1>
         <hr>
-        <div class="row">
-            <div class="col-md-6">
-                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-danger">bcrisp084@yahoo.com
+        <section class="row">
+            <section class="col-md-6">
+                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-info">bcrisp084@yahoo.com
                 </a>
-                <a href="https://www.linkedin.com/in/brian-crisp-b480301b8/" type="button" class="btn btn-success">
+                <a href="https://www.linkedin.com/in/brian-crisp-b480301b8/" type="button" class="btn btn-secondary">
                     https://www.linkedin.com/in/brian-crisp-b480301b8/
                 </a>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
+                <a href="https://www.facebook.com/brian.crisp.18" type="button" class="btn btn-primary">
+                    https://www.facebook.com/brian.crisp.18
+                </a>
+            </section>
+            <section class="col-md-6">
+                <section class="form-group">
                     <label>Name</label>
                     <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
+                </section>
+                <section class="form-group">
                     <label>Email</label>
                     <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
+                </section>
+                <section class="form-group">
                     <label>Message</label>
                     <textarea class="form-control" rows="5"></textarea>
-                </div>
-                <div class="form-group">
+                </section>
+                <section class="form-group">
                     <button class="btn btn-primary btn-block">Submit</button>
-
-                </div>
-            </div>
-        </div>
-    </div>
+                </section>
+            </section>
+        </section>
+    </header>
     <br>
-    <div class="footer">
+    <footer class="footer">
         <p>A project created with <em>Bootstrap.</em></p>
-    </div>
+    </footer>
 
 </body>
 
