--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -20,6 +29,11 @@
             color: white;
             text-align: center;
         }
+
+        body {
+            background: url(lines.jpg);
+            background-size: 100% 100%;
+        }
     </style>
 
 </head>
@@ -31,10 +45,10 @@
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+        <section class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home/About <nav class="sr-only">(current)</nav></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -43,60 +57,59 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
-        </div>
+        </section>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="page header">
+    <section class="container">
+        <section class="row">
+            <section class="col-md-12">
+                <section class="page header">
                     <h1>About Me</h1>
                     <hr>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img src="Family.jpg" alt="picture of Family" height="250px" width="250px">
-                        </div>
-                        <div class="col-md-7">
-                            <p>
-                                "On the other hand, we denounce with righteous indignation and dislike men who are so
-                                beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire,
-                                that
-                                they cannot foresee the pain and trouble that are bound to ensue; and equal blame
-                                belongs to
-                                those who fail in their duty through weakness of will, which is the same as saying
-                                through
-                                shrinking from toil and pain. These cases are perfectly simple and easy to distinguish.
-                                In a
-                                free hour, when our power of choice is untrammelled and when nothing prevents our being
-                                able
-                                to do what we like best, every pleasure is to be welcomed and every pain avoided. But in
-                                certain circumstances and owing to the claims of duty or the obligations of business it
-                                will
-                                frequently occur that pleasures have to be repudiated and annoyances accepted. The wise
-                                man
-                                therefore always holds in these matters to this principle of selection: he rejects
-                                pleasures
-                                to secure other greater pleasures, or else he endures pains to avoid worse pains."
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <div class="footer">
+                </section>
+            </section>
+        </section>
+    </section>
+    <section class="container">
+        <section class="row">
+            <section class="col-md-4">
+                <img src="Family.jpg" alt="picture of Family" height="350" width="350">
+            </section>
+            <section class="col-md-8">
+                <p>My name is Brian Crisp and i am a student at the Johns Hopkins University School of Engineering to
+                    become
+                    a full stack web developer. I don't have very much experience or knowledge of web page design but
+                    that is
+                    steadily changing. So far the tools that i have learned in this course have been tremendous in
+                    helping me understand and implement them into not only the class projects but also some things that
+                    i have always wanted to attempt on my own. I am currently trying to put together a web page for my
+                    wife's
+                    newly opened dog grooming shop. The Bootstrap framework that was used to create this portfolio has
+                    been such a
+                    big help in assisting in the design process. Having the ability to copy and paste frame work pieces
+                    that someone
+                    has created for the benefit of others has started to open my eyes to what the capabilities are and
+                    how much faster
+                    you can get things done when you don't always have to code from scratch. It is amazing when you look
+                    back at
+                    these very large files of code and see what they interpret on the user's screen. I never realized
+                    how much was
+                    involved in the coding process itself and how many different languages there are that don't just
+                    work
+                    independently from one another but in unison.I currently work as a technician at Mercedes Benz and
+                    attend the program in my spare time. I wasn't sure if web development was something that i would
+                    just try to dabble with as a side hobby or if it would turn into something that could be my new
+                    career moving forward but the more i work on things in and out of the class the more aparent it is
+                    becoming
+                    to me that this maybe the career i have been looking for my whole life.
+                </p>
+            </section>
+        </section>
+    </section>
+    <br>
+
+    <footer class="footer">
         <p>A project created with <em>Bootstrap.</em></p>
-    </div>
+    </footer>
 </body>
 
 </html>
