--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -36,7 +45,7 @@
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+        <section class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
@@ -48,59 +57,62 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
-        </div>
+        </section>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="page header">
+    <section class="container">
+        <section class="row">
+            <section class="col-md-12">
+                <section class="page header">
                     <h1>Portfolio</h1>
                     <hr>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <img src="scratch.png" alt="cat game" height="350px" width="350px">
-            </div>
-            <div class="col-lg-6">
-                <img src="grumpycat.png" alt="grumpy cat" height="350px" width="350px">
-            </div>
-        </div>
-    </div>
+                </section>
+            </section>
+        </section>
+    </section>
+    <section class="container">
+        <section class="row">
+            <section class="col-lg-6">
+                <img src="scratch.png" alt="cat game" height="350" width="350">
+                <section class="row">
+                    <section class="col-sm-12"> A scratch activity game
+                    </section>
+                </section>
+            </section>
+            <section class="col-lg-6">
+                <img src="grumpycat.png" alt="grumpy cat" height="350" width="350">
+                <section class="row">
+                    <section class="col-sm-12"> Grumpy cat bio
+                    </section>
+                </section>
+            </section>
+        </section>
+    </section>
     <br>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <img src="shaggychicPNG.PNG" alt="grooming wegpage" height="350px" width="350px">
-            </div>
-            <div class="col-lg-6">
-                <img src="shaggyfirst.PNG" alt="grooming website" height="350px" width="350px">
-            </div>
-        </div>
-    </div>
+    <section class="container">
+        <section class="row">
+            <section class="col-lg-6">
+                <img src="shaggychicPNG.PNG" alt="grooming wegpage" height="350" width="350">
+                <section class="row">
+                    <section class="col-sm-12"> Initial start of a dog grooming page
+                    </section>
+                </section>
+            </section>
+            <section class="col-lg-6">
+                <img src="shaggyfirst.PNG" alt="grooming website" height="350" width="350">
+                <section class="row">
+                    <section class="col-sm-12"> First attempt at a framework webpage
+                    </section>
+                </section>
+            </section>
+        </section>
+    </section>
     <br>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <div class="footer">
+    <br>
+    <footer class="footer">
         <p>A project created with <em>Bootstrap.</em></p>
-    </div>
+    </footer>
+
 </body>
-
-
-
-
 
 
 </html>
