added content to readme file

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="container">
         <section class="row">
             <section class="col-md-4">
-                <img src="Family.jpg" alt="picture of Family" height="350" width="350">
+                <img src="./images/Family.jpg" alt="picture of Family" height="350" width="350">
             </section>
             <section class="col-md-8">
                 <p>My name is Brian Crisp and i am a student at the Johns Hopkins University School of Engineering to
