--- a/portfolio.html
+++ b/portfolio.html
@@ -72,14 +72,14 @@
     <section class="container">
         <section class="row">
             <section class="col-lg-6">
-                <img src="scratch.png" alt="cat game" height="350" width="350">
+                <img src="./images/scratch.png" alt="cat game" height="350" width="350">
                 <section class="row">
                     <section class="col-sm-12"> A scratch activity game
                     </section>
                 </section>
             </section>
             <section class="col-lg-6">
-                <img src="grumpycat.png" alt="grumpy cat" height="350" width="350">
+                <img src="./images/grumpycat.png" alt="grumpy cat" height="350" width="350">
                 <section class="row">
                     <section class="col-sm-12"> Grumpy cat bio
                     </section>
@@ -91,14 +91,14 @@
     <section class="container">
         <section class="row">
             <section class="col-lg-6">
-                <img src="shaggychicPNG.PNG" alt="grooming wegpage" height="350" width="350">
+                <img src="./images/shaggychicPNG.PNG" alt="grooming wegpage" height="350" width="350">
                 <section class="row">
                     <section class="col-sm-12"> Initial start of a dog grooming page
                     </section>
                 </section>
             </section>
             <section class="col-lg-6">
-                <img src="shaggyfirst.PNG" alt="grooming website" height="350" width="350">
+                <img src="./images/shaggyfirst.PNG" alt="grooming website" height="350" width="350">
                 <section class="row">
                     <section class="col-sm-12"> First attempt at a framework webpage
                     </section>
