--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         }
 
         body {
-            background: url(lines.jpg);
+            background: url(./images/lines.jpg);
             background-size: 100% 100%;
         }
     </style>
