--- a/contact.html
+++ b/contact.html
@@ -1,103 +1,162 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-    <title>Contact Me</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://kit.fontawesome.com/b3d4efdc4f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/style.css" />
     <style>
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: rgb(186, 201, 223);
-            color: white;
-            text-align: center;
-        }
-
-        body {
-            background: url(./images/lines.jpg);
-            background-size: 100% 100%;
-        }
+      body {
+        background: url(./images/board.jpg);
+        background-size: 100% 100%;
+      }
     </style>
+    <title>Contact Me</title>
+  </head>
 
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#"><b>Brian Crisp</b> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <section class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Porfolio</a>
-                </li>
-            </ul>
-        </section>>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#" style="color: white"
+        ><b>Brian Crisp</b>
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <section class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html" style="color: white"
+              >Home/About <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html" style="color: white"
+              >Contact</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html" style="color: white"
+              >Porfolio</a
+            >
+          </li>
+        </ul>
+      </section>
+      >
     </nav>
-    <header class="container">
-        <h1>Contact Info</h1>
-        <hr>
-        <section class="row">
-            <section class="col-md-6">
-                <a href="mailto:bcrisp084@yahoo.com" type="button" class="btn btn-info">bcrisp084@yahoo.com
-                </a>
-                <a href="https://www.linkedin.com/in/brian-crisp-b480301b8/" type="button" class="btn btn-secondary">
-                    https://www.linkedin.com/in/brian-crisp-b480301b8/
-                </a>
-                <a href="https://www.facebook.com/brian.crisp.18" type="button" class="btn btn-primary">
-                    https://www.facebook.com/brian.crisp.18
-                </a>
-            </section>
-            <section class="col-md-6">
-                <section class="form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control">
-                </section>
-                <section class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control">
-                </section>
-                <section class="form-group">
-                    <label>Message</label>
-                    <textarea class="form-control" rows="5"></textarea>
-                </section>
-                <section class="form-group">
-                    <button class="btn btn-primary btn-block">Submit</button>
-                </section>
-            </section>
-        </section>
-    </header>
-    <br>
+    <div class="container">
+        <div class="row">
+      <h1 id="header">Contact Info</h1>
+      <hr />
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+          <a
+            href="mailto:bcrisp084@yahoo.com"
+            type="button"
+            class="btn btn-primary"
+            id="btn"
+            >bcrisp084@yahoo.com
+          </a>
+          </div>
+          </div>
+          
+          
+      <div class="row">
+        <div class="col-md-6">
+          <a
+            href="mailto:crispb73001@gmail.com"
+            type="button"
+            class="btn btn-primary"
+            id="btn"
+            >crispb73001@gmail.com
+          </a>
+        </div>
+        <div class="col-md-6">
+            <a href="C:\Users\bcris\OneDrive\Documents\Resume (1).pdf" download="newfilename" type="button"
+            class="btn btn-danger">Download my Resume <i class="fas fa-file-pdf"></i></a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+          <a
+            href="https://github.com/bcrisp084"
+            type="button"
+            class="btn btn-primary"
+            id="btn"
+          >
+            https://github.com/bcrisp084
+          </a>
+        </div>
+        <div class="contact">
+            Reach me at (443)-683-3879
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+          <a
+            href="https://www.facebook.com/brian.crisp.18"
+            type="button"
+            class="btn btn-primary"
+            id="btn"
+          >
+            https://www.facebook.com/brian.crisp.18
+          </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+          <a
+            href="https://www.linkedin.com/in/brian-crisp-265a39204/"
+            type="button"
+            class="btn btn-primary"
+            id="btn"
+          >
+            https://www.linkedin.com/in/brian-crisp-b480301b8/
+          </a>
+        </div>
+    </div>
+
+ 
     <footer class="footer">
-        <p>A project created with <em>Bootstrap.</em></p>
+      <p>A project created with <em>Bootstrap.</em></p>
     </footer>
-
-</body>
-
-
+  </body>
 </html>
