--- a/index.html
+++ b/index.html
@@ -1,115 +1,120 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-    <title>About Me</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/b3d4efdc4f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/style.css" />
     <style>
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: rgb(186, 201, 223);
-            color: white;
-            text-align: center;
-        }
-
-        body {
-            background: url(./images/lines.jpg);
-            background-size: 100% 100%;
-        }
+      body {
+        background: url(./images/board.jpg);
+        background-size: 100% 100%;
+      }
     </style>
+    <title>About Me</title>
+  </head>
 
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#"><b>Brian Crisp</b> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <section class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home/About <nav class="sr-only">(current)</nav></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </section>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light" id="nav">
+      <a class="navbar-brand" href="#" style="color: white"
+        ><b>Brian Crisp</b>
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <section class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#" style="color: white"
+              >Home/About
+              <nav class="sr-only">(current)</nav></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html" style="color: white"
+              >Contact</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html" style="color: white"
+              >Portfolio</a
+            >
+          </li>
+        </ul>
+      </section>
     </nav>
     <section class="container">
-        <section class="row">
-            <section class="col-md-12">
-                <section class="page header">
-                    <h1>About Me</h1>
-                    <hr>
-                </section>
-            </section>
+      <section class="row">
+        <section class="col-md-12">
+          <section class="page header">
+            <h1 id="header">About Me</h1>
+            <hr />
+          </section>
         </section>
+      </section>
     </section>
     <section class="container">
-        <section class="row">
-            <section class="col-md-4">
-                <img src="./images/Family.jpg" alt="picture of Family" height="350" width="350">
-            </section>
-            <section class="col-md-8">
-                <p>My name is Brian Crisp and i am a student at the Johns Hopkins University School of Engineering to
-                    become
-                    a full stack web developer. I don't have very much experience or knowledge of web page design but
-                    that is
-                    steadily changing. So far the tools that i have learned in this course have been tremendous in
-                    helping me understand and implement them into not only the class projects but also some things that
-                    i have always wanted to attempt on my own. I am currently trying to put together a web page for my
-                    wife's
-                    newly opened dog grooming shop. The Bootstrap framework that was used to create this portfolio has
-                    been such a
-                    big help in assisting in the design process. Having the ability to copy and paste frame work pieces
-                    that someone
-                    has created for the benefit of others has started to open my eyes to what the capabilities are and
-                    how much faster
-                    you can get things done when you don't always have to code from scratch. It is amazing when you look
-                    back at
-                    these very large files of code and see what they interpret on the user's screen. I never realized
-                    how much was
-                    involved in the coding process itself and how many different languages there are that don't just
-                    work
-                    independently from one another but in unison.I currently work as a technician at Mercedes Benz and
-                    attend the program in my spare time. I wasn't sure if web development was something that i would
-                    just try to dabble with as a side hobby or if it would turn into something that could be my new
-                    career moving forward but the more i work on things in and out of the class the more aparent it is
-                    becoming
-                    to me that this maybe the career i have been looking for my whole life.
-                </p>
-            </section>
+      <section class="row">
+        <section class="col-md-4">
+          <img
+            src="./images/Family.jpg"
+            alt="picture of Family"
+            height="350"
+            width="350"
+          />
         </section>
+        <section class="col-md-8" id="info">
+          <p>
+            My name is Brian Crisp and I am a student at the Johns Hopkins
+            University School of Engineering. I aspire to become a full stack
+            web developer. I have always been interested in learning computer
+            programming, but have never had the oportunity. I am eager to learn
+            as much as possible and to turn this experience into a career.
+          </p>
+        </section>
+      </section>
     </section>
-    <br>
+    <br />
 
     <footer class="footer">
-        <p>A project created with <em>Bootstrap.</em></p>
+      <p>A project created with <em>Bootstrap.</em></p>
     </footer>
-</body>
-
+  </body>
 </html>
