changed portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,18 +63,19 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html" style="color: white"
-              >Contact</a
+            <a class="nav-link" href="portfolio.html" style="color: white"
+              >Portfolio</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html" style="color: white"
-              >Portfolio</a
+            <a class="nav-link" href="contact.html" style="color: white"
+              >Contact</a
             >
           </li>
         </ul>
       </section>
     </nav>
+
     <section class="container">
       <section class="row">
         <section class="col-md-12">
@@ -85,65 +86,86 @@
         </section>
       </section>
     </section>
-    <section class="container">
-      <section class="row">
-        <section class="col-lg-6">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="projects">
+            <p style="text-align: center"><b>Astrozoders</b></p>
+            <a href="https://asheth22.github.io/Astrozoders/"
+              >https://asheth22.github.io/Astrozoders/</a
+            >
+            <p>Link to the deployed application</p>
+            <a href="https://github.com/bcrisp084/Astrozoders"
+              >https://github.com/bcrisp084/Astrozoders</a
+            >
+            <p>Link to the GITHUB repository</p>
+          </div>
+        </div>
+        <div class="col-md-8">
           <img
-            src="./images/scratch.png"
-            alt="cat game"
+            src="./images/astrozoders.PNG"
+            alt="horoscope"
             height="350"
-            width="350"
+            width="750"
           />
-          <section class="row">
-            <section class="col-sm-12">A scratch activity game</section>
-          </section>
-        </section>
-        <section class="col-lg-6">
-          <img
-            src="./images/grumpycat.png"
-            alt="grumpy cat"
-            height="350"
-            width="350"
-          />
-          <section class="row">
-            <section class="col-sm-12">Grumpy cat bio</section>
-          </section>
-        </section>
-      </section>
-    </section>
+        </div>
+      </div>
+    </div>
     <br />
-    <section class="container">
-      <section class="row">
-        <section class="col-lg-6">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="projects">
+            <p style="text-align: center"><b>Daily-To-Do</b></p>
+            <a href="https://bcrisp084.github.io/Daily-To-Do/"
+              >https://bcrisp084.github.io/Daily-To-Do/</a
+            >
+            <p>Link to the deployed application</p>
+            <a href="https://github.com/bcrisp084/Daily-To-Do"
+              >https://github.com/bcrisp084/Daily-To-Do</a
+            >
+            <p>Link to the GITHUB repository</p>
+          </div>
+        </div>
+        <div class="col-md-8">
           <img
-            src="./images/shaggychicPNG.PNG"
-            alt="grooming wegpage"
+            src="./images/daily-to-do.png"
+            alt="planner"
             height="350"
-            width="350"
+            width="750"
           />
-          <section class="row">
-            <section class="col-sm-12">
-              Initial start of a dog grooming page
-            </section>
-          </section>
-        </section>
-        <section class="col-lg-6">
+        </div>
+      </div>
+    </div>
+
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="projects">
+            <p style="text-align: center"><b>Should-i-bring-an-umbrella-</b></p>
+            <a href="https://bcrisp084.github.io/Should-i-bring-an-umbrella-/"
+              >https://bcrisp084.github.io/Should-i-bring-an-umbrella-/</a
+            >
+            <p>Link to the deployed application</p>
+            <a href="https://github.com/bcrisp084/Should-i-bring-an-umbrella-"
+              >https://github.com/bcrisp084/Should-i-bring-an-umbrella-</a
+            >
+            <p>Link to the GITHUB repository</p>
+          </div>
+        </div>
+        <div class="col-md-8">
           <img
-            src="./images/shaggyfirst.PNG"
-            alt="grooming website"
+            src="./images/weather.png"
+            alt="weather"
             height="350"
-            width="350"
+            width="750"
           />
-          <section class="row">
-            <section class="col-sm-12">
-              First attempt at a framework webpage
-            </section>
-          </section>
-        </section>
-      </section>
-    </section>
-    <br />
-    <br />
+        </div>
+      </div>
+    </div>
+
     <footer class="footer">
       <p>A project created with <em>Bootstrap.</em></p>
     </footer>
