finished updating the page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,23 @@
         </section>
       </section>
     </section>
+
     <section class="container">
       <section class="row">
+        <section class="col-md-4" id="info">
+          <p>
+            My name is Brian Crisp and I am a student at the Johns Hopkins
+            University School of Engineering full stack web developer bootcamp.
+            For the past ten years i thought cars were my passion but now it
+            seems i would prefer that as a hobby. Entering into this program i
+            didn't know what to expect but so far it has opened my eyes to a
+            world of possibilities i didn't know existed. Web development is
+            becoming a passion that i can't seem to get enough of. The idea of
+            working in part in a team environment has been a cheerful reminder
+            of how things can be achieved when everyone works in unison and i'm
+            always eager to hear other developers ideas.
+          </p>
+        </section>
         <section class="col-md-4">
           <img
             src="./images/Family.jpg"
@@ -100,13 +115,20 @@
             width="350"
           />
         </section>
-        <section class="col-md-8" id="info">
-          <p>
-            My name is Brian Crisp and I am a student at the Johns Hopkins
-            University School of Engineering. I aspire to become a full stack
-            web developer. I have always been interested in learning computer
-            programming, but have never had the oportunity. I am eager to learn
-            as much as possible and to turn this experience into a career.
+        <section class="col-md-4" id="info">
+          <p style="text-align: center"><b>Skills</b></p>
+          <ul>
+            <li>Power Point</li>
+            <li>Javascript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>AJAX</li>
+            <li>JQUERY</li>
+            <li>Node.js</li>
+          </ul>
+          <p style="color: rgb(191, 184, 212)">
+            Fun Fact: I have been teaching myself spanish everyday for the last
+            90 days.
           </p>
         </section>
       </section>
