--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
             <a href="https://github.com/bcrisp084/Astrozoders"
               >https://github.com/bcrisp084/Astrozoders</a
             >
-            <p>Link to the GITHUB repository</p>
+            <p>Link to the GitHub repository</p>
           </div>
         </div>
         <div class="col-md-8">
@@ -125,7 +125,7 @@
             <a href="https://github.com/bcrisp084/Daily-To-Do"
               >https://github.com/bcrisp084/Daily-To-Do</a
             >
-            <p>Link to the GITHUB repository</p>
+            <p>Link to the GitHub repository</p>
           </div>
         </div>
         <div class="col-md-8">
@@ -152,7 +152,7 @@
             <a href="https://github.com/bcrisp084/Should-i-bring-an-umbrella-"
               >https://github.com/bcrisp084/Should-i-bring-an-umbrella-</a
             >
-            <p>Link to the GITHUB repository</p>
+            <p>Link to the GitHub repository</p>
           </div>
         </div>
         <div class="col-md-8">
