--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         </div>
         <div class="col-md-8">
           <img
-            src="./images/astrozoders.PNG"
+            src="./images/astrozoders.png"
             alt="horoscope"
             height="350"
             width="750"
