changed resume link

--- a/contact.html
+++ b/contact.html
@@ -107,11 +107,11 @@
           </a>
         </div>
         <div class="col-md-6">
-            <a href="C:\Users\bcris\OneDrive\Documents\Resume (1).pdf" download="newfilename" type="button"
+            <a href="https://docs.google.com/document/d/1GGcZ0exNR5aGWf_GQ2vOHDGYmQHUdiMDLvSzcVS071U/edit" download="newfilename" type="button"
             class="btn btn-danger">Download my Resume <i class="fas fa-file-pdf"></i></a>
         </div>
     </div>
-
+    <!-- C:\Users\bcris\OneDrive\Documents\Resume (1).pdf -->
     <div class="row">
         <div class="col-md-6">
           <a
