made appearance changes and information updates

--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,14 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="https://kit.fontawesome.com/b3d4efdc4f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b3d4efdc4f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/style.css" />
     <style>
       body {
-        background: url(./images/board.jpg);
+        background: url(./images/blue.jpg);
         background-size: 100% 100%;
       }
     </style>
@@ -75,88 +78,144 @@
           </li>
         </ul>
       </section>
-      >
     </nav>
     <div class="container">
-        <div class="row">
-      <h1 id="header">Contact Info</h1>
-      <hr />
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-          <a
-            href="mailto:bcrisp084@yahoo.com"
-            type="button"
-            class="btn btn-primary"
-            id="btn"
-            >bcrisp084@yahoo.com
-          </a>
-          </div>
-          </div>
-          
-          
       <div class="row">
-        <div class="col-md-6">
-          <a
-            href="mailto:crispb73001@gmail.com"
-            type="button"
-            class="btn btn-primary"
-            id="btn"
-            >crispb73001@gmail.com
-          </a>
+        <div class="col-md-12">
+          <h1 id="header" style="text-align: center">Contact Info</h1>
+          <hr />
         </div>
-        <div class="col-md-6">
-            <a href="https://docs.google.com/document/d/1GGcZ0exNR5aGWf_GQ2vOHDGYmQHUdiMDLvSzcVS071U/edit" download="newfilename" type="button"
-            class="btn btn-danger">Download my Resume <i class="fas fa-file-pdf"></i></a>
-        </div>
-    </div>
-    <!-- C:\Users\bcris\OneDrive\Documents\Resume (1).pdf -->
-    <div class="row">
-        <div class="col-md-6">
-          <a
-            href="https://github.com/bcrisp084"
-            type="button"
-            class="btn btn-primary"
-            id="btn"
-          >
-            https://github.com/bcrisp084
-          </a>
-        </div>
-        <div class="contact">
-            Reach me at (443)-683-3879
-        </div>
-    </div>
+      </div>
 
-    <div class="row">
-        <div class="col-md-6">
-          <a
-            href="https://www.facebook.com/brian.crisp.18"
-            type="button"
-            class="btn btn-primary"
-            id="btn"
-          >
-            https://www.facebook.com/brian.crisp.18
-          </a>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <a
+              href="mailto:crispb73001@gmail.com"
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img
+                src="https://img.icons8.com/fluent/48/000000/gmail--v2.png"
+              />Gmail</a
+            >
+          </div>
+      <div class="col-md-4">
+        <a
+          href="https://www.linkedin.com/in/brian-crisp-265a39204/"
+          type="button"
+          class="btn btn-primary"
+          id="btn"
+          ><img
+            src="https://img.icons8.com/fluent/48/000000/linkedin.png"
+          />
+          linkedin</a
+        >
+      </div>
+      <div class="col-md-4">
+        <a
+          href="tel:443-683-3879"
+          type="button"
+          class="btn btn-primary"
+          id="btn"
+          ><img src="https://img.icons8.com/emoji/48/000000/mobile-phone.png"/>Call me</a
+        >
+      </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-          <a
-            href="https://www.linkedin.com/in/brian-crisp-265a39204/"
-            type="button"
-            class="btn btn-primary"
-            id="btn"
-          >
-            https://www.linkedin.com/in/brian-crisp-b480301b8/
-          </a>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <a
+              href="mailto:bcrisp084@yahoo.com"
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img
+                src="https://img.icons8.com/doodle/48/000000/yahoo--v1.png"
+              />yahoo</a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              href="https://www.facebook.com/brian.crisp.18"
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img
+                src="https://img.icons8.com/color/48/000000/facebook.png"
+              />facebook</a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              href=""
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img src="https://img.icons8.com/fluent/48/000000/long-arrow-down.png"/>download my resume below</a
+            >
+          </div>
         </div>
-    </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <a
+              href="https://github.com/bcrisp084"
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img src="https://img.icons8.com/fluent/48/000000/github.png" />
+              github</a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              href="https://www.instagram.com/bcrisp/"
+              type="button"
+              class="btn btn-primary"
+              id="btn"
+              ><img
+                src="https://img.icons8.com/fluent/48/000000/instagram-new.png"
+              />Instagram</a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              href="https://docs.google.com/document/d/1GGcZ0exNR5aGWf_GQ2vOHDGYmQHUdiMDLvSzcVS071U/edit"
+              download="newfilename"
+              class="btn btn-primary"
+              id="btn"
+              ><img src="https://img.icons8.com/color/48/000000/paper.png"/>
+              Resume</a
+            >
+          </div>
+        </div>
+      </div>
+  
 
- 
-    <footer class="footer">
-      <p>A project created with <em>Bootstrap.</em></p>
-    </footer>
+
+
+
+
+
+<!--       
+      <div class="col-md-6">
+        <a
+          href="https://docs.google.com/document/d/1GGcZ0exNR5aGWf_GQ2vOHDGYmQHUdiMDLvSzcVS071U/edit"
+          download="newfilename"
+          type="button"
+          class="btn btn-danger"
+          >Download my Resume <i class="fas fa-file-pdf"></i
+        ></a>
+      </div>
+    </div>
+    C:\Users\bcris\OneDrive\Documents\Resume (1).pdf -->
+
+    <script
+      src="https://kit.fontawesome.com/fada8ce98a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
