--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <style>
       body {
-        background: url(./images/board.jpg);
+        background: url(./images/blue.jpg);
         background-size: 100% 100%;
       }
     </style>
@@ -84,7 +84,7 @@
       <section class="row">
         <section class="col-md-12">
           <section class="page header">
-            <h1 id="header">About Me</h1>
+            <h1 id="header" style="text-align: center">About Me</h1>
             <hr />
           </section>
         </section>
@@ -95,16 +95,17 @@
       <section class="row">
         <section class="col-md-4" id="info">
           <p>
-            My name is Brian Crisp and I am a student at the Johns Hopkins
-            University School of Engineering full stack web developer bootcamp.
-            For the past ten years i thought cars were my passion but now it
-            seems i would prefer that as a hobby. Entering into this program i
-            didn't know what to expect but so far it has opened my eyes to a
-            world of possibilities i didn't know existed. Web development is
-            becoming a passion that i can't seem to get enough of. The idea of
-            working in part in a team environment has been a cheerful reminder
-            of how things can be achieved when everyone works in unison and i'm
-            always eager to hear other developers ideas.
+            Hello and welcome to my profile. My name is Brian Crisp and i would
+            like to share a little bit about who i am. Currently i am studying
+            to become a full stack web developer at Johns Hopkins. During the
+            day i am a automotive state inspector who is also preparing to
+            become a father later this year. In the past few months i have
+            discovered that i really love learning to become a developer and i
+            wish i had discovered that a long time ago but, here i am. I am so
+            excited to see the where the road ahead takes me and i couldn't be
+            more ready for the journey. I am looking for my first job in the
+            programming field and i am very eager to learn. Thank you for
+            visiting and i hope you enjoy.
           </p>
         </section>
         <section class="col-md-4">
@@ -125,18 +126,21 @@
             <li>AJAX</li>
             <li>JQUERY</li>
             <li>Node.js</li>
+            <li>MYSQL</li>
+            <li>Express</li>
+            <li>OOP</li>
           </ul>
-          <p style="color: rgb(191, 184, 212)">
-            Fun Fact: I have been teaching myself spanish everyday for the last
-            90 days.
+          <p style="color: rgb(0, 0, 0)">
+            Fun Fact: I have been learning spanish everyday for the last 130
+            days and i love every minute of it.
           </p>
         </section>
       </section>
     </section>
     <br />
-
-    <footer class="footer">
-      <p>A project created with <em>Bootstrap.</em></p>
-    </footer>
+    <script
+      src="https://kit.fontawesome.com/fada8ce98a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
