--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <style>
       body {
-        background: url(./images/board.jpg);
+        background: url(./images/blue.jpg);
         background-size: 100% 100%;
       }
     </style>
@@ -80,12 +80,39 @@
       <div class="row">
         <div class="col-md-12">
           <div class="page header">
-            <h1 id="header">Portfolio</h1>
+            <h1 id="header" style="text-align: center">Portfolio</h1>
             <hr />
           </div>
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="projects">
+            <p style="text-align: center"><b>gottaGO</b></p>
+            <a href="https://murmuring-dawn-63159.herokuapp.com/"
+              >https://murmuring-dawn-63159.herokuapp.com/</a
+            >
+            <p>Link to the deployed application</p>
+            <a href="https://github.com/bcrisp084/gottaGO"
+              >https://github.com/bcrisp084/gottaGO</a
+            >
+            <p>Link to the GitHub repository</p>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <img
+            src="./images/gottaGO.PNG"
+            alt="horoscope"
+            height="350"
+            width="750"
+            id="project-pic"
+          />
+        </div>
+      </div>
+    </div>
+    <br />
 
     <div class="container">
       <div class="row">
@@ -108,6 +135,35 @@
             alt="horoscope"
             height="350"
             width="750"
+            id="project-pic"
+          />
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="projects">
+            <p style="text-align: center"><b>The guys from work</b></p>
+            <a
+              href="https://drive.google.com/file/d/1qS7oJLLXi-K__ADWcDoJW3McZONAk5UD/view?usp=sharing"
+              >https://drive.google.com/file/d/1qS7oJLLXi-K__ADWcDoJW3McZONAk5UD/view?usp=sharing</a
+            >
+            <p>Link to the application demo</p>
+            <a href="https://github.com/bcrisp084/The-guys-from-work"
+              >https://github.com/bcrisp084/The-guys-from-work</a
+            >
+            <p>Link to the GitHub repository</p>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <img
+            src="./images/Theguysfromwork.PNG"
+            alt="planner"
+            height="350"
+            width="750"
+            id="project-pic"
           />
         </div>
       </div>
@@ -134,6 +190,7 @@
             alt="planner"
             height="350"
             width="750"
+            id="project-pic"
           />
         </div>
       </div>
@@ -161,13 +218,14 @@
             alt="weather"
             height="350"
             width="750"
+            id="project-pic"
           />
         </div>
       </div>
     </div>
-
-    <footer class="footer">
-      <p>A project created with <em>Bootstrap.</em></p>
-    </footer>
+    <script
+      src="https://kit.fontawesome.com/fada8ce98a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
