added style changes

--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
               type="button"
               class="btn btn-primary"
               id="btn"
-              ><img src="https://img.icons8.com/fluent/48/000000/long-arrow-down.png"/>download my resume below</a
+              ><img src="https://img.icons8.com/fluent/48/000000/long-arrow-down.png"/><img src="https://img.icons8.com/fluent/48/000000/long-arrow-down.png"/></a
             >
           </div>
         </div>
@@ -194,24 +194,6 @@
         </div>
       </div>
   
-
-
-
-
-
-
-<!--       
-      <div class="col-md-6">
-        <a
-          href="https://docs.google.com/document/d/1GGcZ0exNR5aGWf_GQ2vOHDGYmQHUdiMDLvSzcVS071U/edit"
-          download="newfilename"
-          type="button"
-          class="btn btn-danger"
-          >Download my Resume <i class="fas fa-file-pdf"></i
-        ></a>
-      </div>
-    </div>
-    C:\Users\bcris\OneDrive\Documents\Resume (1).pdf -->
 
     <script
       src="https://kit.fontawesome.com/fada8ce98a.js"
